# ize-service-api

./: Cargo.toml
src/: lib.rs  main.rs  schema.rs
src/config/: database.rs
src/error/: mod.rs
src/middlewares/: auth_guard.rs
src/modules/: mod.rs  router.rs
src/modules/auth/: dtos.rs  handlers.rs  mod.rs  router.rs  services.rs
src/modules/roles/: dtos.rs  handlers.rs  mod.rs  models.rs  repository.rs  router.rs  services.rs
src/modules/users/: dtos.rs  handlers.rs  models.rs  repository.rs  router.rs  services.rs
src/utils/: dtos.rs  id_gen.rs  jwt.rs  mod.rs  pagination.rs  password.rs  time.rs
