[package]
name = "ize_service_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Async Runtime
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] } # สำหรับทำ CORS และ Log

# Database (Diesel ORM)
diesel = { version = "2.3.7", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0.8.10" # สำหรับทำ Database Connection Pool

# Serialization (จัดการ JSON)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Authentication & Security
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] } # สำหรับทำ JWT (Access/Refresh Token)
argon2 = "0.5.3" # อัลกอริทึม Hash Password ที่ปลอดภัยที่สุดในปัจจุบัน
rand_core = { version = "0.6.4", features = ["std", "getrandom"] }

# Utilities
dotenvy = "0.15.7" # สำหรับโหลดไฟล์ .env
uuid = { version = "1.23.0", features = ["v4", "serde"] } # จัดการ UUID
chrono = { version = "0.4.44", features = ["serde"] } # จัดการวันเวลา
nanoid = "0.4"

# OpenAPI & Scalar UI (สำหรับทำหน้า Document เทส API)
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
